--- a/TnTComponents.Testing/TnTComponents.Server/Components/App.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/App.razor
@@ -7,7 +7,8 @@
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="TnTComponents.styles.css" />
+    <link rel="stylesheet" href="TnTComponents.Server.styles.css" />
+    <link rel="stylesheet" href="TnTComponents.Client.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
