--- a/TnTComponents.Testing/TnTComponents.Server/Components/App.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/App.razor
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <base href="/" />
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="_content/TnTComponents/style.css" />
     <link rel="stylesheet" href="TnTComponents.Server.styles.css" />
     <link rel="stylesheet" href="TnTComponents.Client.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
