--- a/TnTComponents.Testing/TnTComponents.Server/Components/Pages/Home.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/Pages/Home.razor
@@ -1,6 +1,4 @@
 ﻿@page "/"
 
-<TnTComponents.SideNav.SideNav>
-  
-</TnTComponents.SideNav.SideNav>
+<TnTComponents.Client.Pages.Counter></TnTComponents.Client.Pages.Counter>
 
