--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -1,4 +1,5 @@
-﻿@import 'Common/_default_theme_variables.scss';
+﻿@import 'Common/_default_theme.scss';
 @import 'Common/_common.scss';
 @import 'Components/_sidenav.scss';
+@import 'Components/_buttons.scss';
 
