--- a/TnTComponents.Testing/TnTComponents.Client/Pages/Counter.razor
+++ b/TnTComponents.Testing/TnTComponents.Client/Pages/Counter.razor
@@ -7,13 +7,17 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<TnTComponents.Button.TnTButton Icon="domain"
+                                IconClass="material-icons"
+                                Text="Click me"
+                                OnClick="IncrementCount">
 
+</TnTComponents.Button.TnTButton>
 @code {
     private int currentCount = 0;
 
-    private void IncrementCount()
-    {
+    private async Task IncrementCount() {
         currentCount++;
+        await Task.Delay(2000);
     }
 }
