--- a/TnTComponents.Testing/TnTComponents.Server/Components/Pages/Home.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/Pages/Home.razor
@@ -1,4 +1,34 @@
 ﻿@page "/"
+@using TnTComponents.Button
+@attribute [RenderModeAuto]
 
-<TnTComponents.Client.Pages.Counter></TnTComponents.Client.Pages.Counter>
+<Stack Direction="TnTComponents.Enum.StackDirection.Vertical">
+    <TnTButton Text="Value">
+
+    </TnTButton>
+
+    <TnTButton Text="Value">
+
+    </TnTButton>
+    <TnTButton Text="Value">
+
+    </TnTButton>
+
+    <Stack Direction="TnTComponents.Enum.StackDirection.Horizontal">
+        <TnTButton Text="Value">
+
+        </TnTButton>
+
+        <TnTButton Text="Value">
+
+        </TnTButton>
+        <TnTButton Text="Value">
+
+        </TnTButton>
+        <TnTButton Text="">
+
+        </TnTButton>
+    </Stack>
+
+</Stack>
 
