--- a/TnTComponents/Styles/Common/_default_theme_variables.scss
+++ b/TnTComponents/Styles/Common/_default_theme_variables.scss
@@ -58,6 +58,6 @@ $tnt-sidebar-width: 250px !default;
 $tnt-sidebar-font-size: 14px !default;
 $tnt-sidebar-font-color: rgba(0,0,0,.87) !default;
 $tnt-sidebar-bg-color: #fff !default;
-$tnt-sidebar-padding: 16px !default;
+$tnt-sidebar-padding: 1.2rem !default;
 $tnt-sidebar-item-height: 48px !default;
 $tnt-sidebar-line-height: $tnt-sidebar-item-height !default;
