--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -2,4 +2,5 @@
 @import 'Common/_common.scss';
 @import 'Components/_sidenav.scss';
 @import 'Components/_buttons.scss';
+@import 'Components/_stack.scss';
 
