--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -1,5 +1,6 @@
 ﻿@import 'Common/_default_theme.scss';
 @import 'Common/_common.scss';
+@import 'Common/_grid.scss';
 @import 'Components/_sidenav.scss';
 @import 'Components/_buttons.scss';
 @import 'Components/_stack.scss';
