--- a/TnTComponents/MainLayout.razor
+++ b/TnTComponents/MainLayout.razor
@@ -1,5 +1,23 @@
-﻿<h3>MainLayout</h3>
+﻿@inherits LayoutComponentBase
 
-@code {
+<div>
+    <div>
+        <NavMenu />
+    </div>
 
-}
+    <main>
+        <div>
+            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+        </div>
+
+        <article>
+            @Body
+        </article>
+    </main>
+</div>
+
+<div>
+    An unhandled error has occurred.
+    <a href="">Reload</a>
+    <a>🗙</a>
+</div>
