--- a/TnTComponents/Styles/Components/_sidenav.scss
+++ b/TnTComponents/Styles/Components/_sidenav.scss
@@ -8,18 +8,11 @@
    overflow-y: auto;
    will-change: transform;
    backface-visibility: hidden;
-   transform: translateX(-105%);
+   transform: translateX(-5%);
    @extend .tnt-z-depth-1;
-   // Right Align
-   //   &.right-aligned {
-   //      right: 0;
-   //      transform: translateX(105%);
-   //      left: auto;
-   //      transform: translateX(100%);
-   //   }
-   //   .collapsible {
-   //      margin: 0;
-   //   }
+   transition: transform ease-in-out 150ms;
+   border-radius: 1rem;
+
    ul {
       padding: 0;
    }
@@ -50,62 +43,24 @@
             padding-right: 1rem;
             line-height: 3rem;
          }
+
+         > i.material-icons {
+            vertical-align: middle;
+         }
       }
    }
-   //   .subheader {
-   //      &:hover {
-   //         background-color: transparent;
-   //      }
-   //      cursor: initial;
-   //      pointer-events: none;
-   //      color: rgba(0,0,0,.54);
-   //      font-weight: 500;
-   //   }
-   //   .user-view {
-   //      position: relative;
-   //      & > a {
-   //         &:hover {
-   //            background-color: transparent;
-   //         }
-   //         height: auto;
-   //         padding: 0;
-   //      }
-   //      .background {
-   //         overflow: hidden;
-   //         position: absolute;
-   //         top: 0;
-   //         right: 0;
-   //         bottom: 0;
-   //         left: 0;
-   //         z-index: -1;
-   //      }
-   //      .circle, .name, .email {
-   //         display: block;
-   //      }
-   //      .circle {
-   //         height: 64px;
-   //         width: 64px;
-   //      }
-   //      .name {
-   //         margin-top: 16px;
-   //         font-weight: 500;
-   //      }
-   //      .email {
-   //         padding-bottom: 16px;
-   //         font-weight: 400;
-   //      }
-   //   }
+}
+
+.tnt-sidebar-closed {
+   transform: translateX(-105%);
+}
+
+.tnt-sidebar-button {
+   cursor: pointer;
 }
 
 
-// Fixed tnt-sidebar shown
 .tnt-sidebar.tnt-sidebar-fixed {
-   // Right Align
-   //   &.right-aligned {
-   //      right: 0;
-   //      left: auto;
-   //   }
-
    left: 0;
    transform: translateX(0);
    position: fixed;
@@ -121,44 +76,23 @@
       height: $tnt-sidebar-item-height;
       line-height: $tnt-sidebar-line-height;
       padding: 0 ($tnt-sidebar-padding * 2);
-      //&.btn,
-      //&.btn-large,
-      //&.btn-floating {
-      //   color: $tnt-button-raised-color;
-      //}
-      //&.btn-flat {
-      //   color: $tnt-button-flat-color;
-      //}
-      //&.btn:hover,
-      //&.btn-large:hover {
-      //   background-color: lighten($tnt-button-raised-background, 5%);
-      //}
-      //&.btn-floating:hover {
-      //   background-color: $tnt-button-raised-background;
-      //}
 
       & > i,
-      //& > [class^="mdi-"], li > a > [class*="mdi-"],
       & > i.material-icons {
-         //height: $tnt-sidebar-item-height;
          line-height: $tnt-sidebar-line-height;
          margin: 0 ($tnt-sidebar-padding * 2) 0 0;
       }
    }
-   //   .divider {
-   //      margin: ($tnt-sidebar-padding / 2) 0 0 0;
-   //   }
-   //   .subheader {
-   //      font-size: $tnt-sidebar-font-size;
-   //      line-height: $tnt-sidebar-line-height;
-   //   }
-   //   .user-view {
-   //      padding: ($tnt-sidebar-padding * 2) ($tnt-sidebar-padding * 2) 0;
-   //      margin-bottom: $tnt-sidebar-padding / 2;
-   //      .name,
-   //      .email {
-   //         font-size: $tnt-sidebar-font-size;
-   //         line-height: $tnt-sidebar-line-height / 2;
-   //      }
-   //   }
+}
+
+.tnt-sidebar-button[theme=default] {
+   position: fixed;
+   transform: translateX($tnt-sidebar-width + 20px);
+   transition: transform ease-in-out 150ms;
+   color: $tnt-sidebar-font-color;
+}
+
+.tnt-sidebar-button[theme=default].tnt-sidebar-closed {
+   position: fixed;
+   transform: translateX(5px);
 }
