--- a/TnTComponents/_Imports.razor
+++ b/TnTComponents/_Imports.razor
@@ -1,3 +1,4 @@
-﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web
 @using TnTComponents.Common
 @using TnTComponents.Enum;
+@using Microsoft.AspNetCore.Components.Routing
