Fixed button outline

--- a/TnTComponents/Styles/Components/_buttons.scss
+++ b/TnTComponents/Styles/Components/_buttons.scss
@@ -75,7 +75,7 @@
 }
 
 .tnt-btn-outlined[theme=default] {
-   outline-color: $tnt-color-primary;
+   outline-color: $tnt-color-outline;
    color: $tnt-color-primary;
 
    &:hover {
