--- a/TnTComponents/Styles/Common/_default_theme_variables.scss
+++ b/TnTComponents/Styles/Common/_default_theme_variables.scss
@@ -62,6 +62,8 @@ $tnt-sidebar-padding: 1.2rem !default;
 $tnt-sidebar-item-height: 48px !default;
 $tnt-sidebar-line-height: $tnt-sidebar-item-height !default;
 
+// TnT-Header
+$tnt-header-height: 2.5rem !default;
 
 // Media Query Ranges
 $small-screen-up: 601px !default;
