--- a/TnTComponents/TnTLayout.razor
+++ b/TnTComponents/TnTLayout.razor
@@ -1,8 +1,13 @@
 ﻿@inherits TnTBaseComponent
 
-@ChildContent
+<CascadingValue Value="this">
+    @ChildContent
+</CascadingValue>
 
 @code {
     [Parameter]
     public RenderFragment ChildContent { get; set; } = default!;
+
+    [Parameter]
+    public bool Responsive { get; set; } = true;
 }
