--- a/TnTComponents/Styles/Common/_common.scss
+++ b/TnTComponents/Styles/Common/_common.scss
@@ -42,3 +42,46 @@
    box-shadow: 0px 28px 32px 6px rgba(69,73,79,0.15), 0px 8px 10px rgba(69,73,79,0.3);
 }
 
+.tnt-border-radius-0 {
+   border-radius: 0rem;
+}
+
+.tnt-border-radius-1 {
+   border-radius: 0.25rem;
+}
+
+.tnt-border-radius-2 {
+   border-radius: 0.5rem;
+}
+
+.tnt-border-radius-3 {
+   border-radius: 0.75rem;
+}
+
+.tnt-border-radius-4 {
+   border-radius: 1rem;
+}
+
+.tnt-border-radius-5 {
+   border-radius: 1.25rem;
+}
+
+.tnt-border-radius-6 {
+   border-radius: 1.5rem;
+}
+
+.tnt-border-radius-7 {
+   border-radius: 1.75rem;
+}
+
+.tnt-border-radius-8 {
+   border-radius: 2rem;
+}
+
+.tnt-border-radius-9 {
+   border-radius: 2.25rem;
+}
+
+.tnt-border-radius-10 {
+   border-radius: 2.5rem;
+}
