--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -3,6 +3,7 @@
 @import 'Common/_grid.scss';
 @import 'Components/_body.scss';
 @import 'Components/_header.scss';
+@import 'Components/_card.scss';
 @import 'Components/_sidenav.scss';
 @import 'Components/_buttons.scss';
 @import 'Components/_stack.scss';
