Added more card options

--- a/TnTComponents/Styles/Components/_card.scss
+++ b/TnTComponents/Styles/Components/_card.scss
@@ -6,3 +6,18 @@
    width: fit-content;
    margin: 1rem;
 }
+
+.tnt-card.flat, .tnt-card.plain, .tnt-card.outline {
+   @extend .tnt-z-depth-0;
+}
+
+.tnt-card[theme=default].flat {
+   background-color: $tnt-color-surface-variant;
+}
+
+.tnt-card[theme=default].outline {
+   outline-color: $tnt-color-outline;
+   outline-style: solid;
+   outline-width: 1px;
+   background-color: transparent;
+}
