--- a/TnTComponents/TnTButton.razor
+++ b/TnTComponents/TnTButton.razor
@@ -35,8 +35,8 @@
             case ButtonType.Filled:
                 return "filled";
 
-            case ButtonType.Outline:
-                return "outline";
+            case ButtonType.Outlined:
+                return "outlined";
         }
     }
 }
