--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -7,6 +7,7 @@
 @import 'Components/_sidenav.scss';
 @import 'Components/_buttons.scss';
 @import 'Components/_stack.scss';
+@import 'Components/forms/_form.scss';
 
 body {
    margin: 0px;
