--- a/TnTComponents/TnTCard.razor
+++ b/TnTComponents/TnTCard.razor
@@ -25,8 +25,8 @@
             case CardType.Plain:
                 return "plain";
 
-            case CardType.Outline:
-                return "outline";
+            case CardType.Outlined:
+                return "outlined";
         }
     }
 
