Added helper text

--- a/TnTComponents.Testing/TnTComponents.Server/Components/Pages/Home.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/Pages/Home.razor
@@ -40,27 +40,27 @@
     </TnTSideBar>
     <TnTBody SideBarExpanded="@_sideBarExpanded">
         <TnTForm FormType="FormType.Outlined">
-            <TnTTextBox @bind-Value="_textValue" Icon="search" Label="My Label" Placeholder="My Placeholder" />
+            <TnTTextBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
         </TnTForm>
 
         <TnTForm FormType="FormType.Default">
-            <TnTTextBox @bind-Value="_textValue" Icon="search" Label="My Label" Placeholder="My Placeholder" />
+            <TnTTextBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
         </TnTForm>
 
         <TnTForm FormType="FormType.Filled">
-            <TnTTextBox @bind-Value="_textValue" Icon="search" Label="My Label" Placeholder="My Placeholder" />
+            <TnTTextBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
         </TnTForm>
 
         <TnTForm FormType="FormType.Outlined">
-            <TnTTextBox @bind-Value="_textValue" Icon="search" Label="My Label"  />
+            <TnTTextBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" />
         </TnTForm>
 
         <TnTForm FormType="FormType.Default">
-            <TnTTextBox @bind-Value="_textValue" Icon="search" Label="My Label" />
+            <TnTTextBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" />
         </TnTForm>
 
         <TnTForm FormType="FormType.Filled">
-            <TnTTextBox @bind-Value="_textValue" Icon="search" Label="My Label" />
+            <TnTTextBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" />
         </TnTForm>
 
         @_textValue
