--- a/TnTComponents/Forms/TnTFormField.razor
+++ b/TnTComponents/Forms/TnTFormField.razor
@@ -20,6 +20,10 @@
     }
 </div>
 
+@if (!string.IsNullOrWhiteSpace(HelperText)) {
+    <span class="helper-text">@HelperText</span>
+}
+
 
 @code {
     [CascadingParameter]
