--- a/TnTComponents/Styles/Components/forms/_form.scss
+++ b/TnTComponents/Styles/Components/forms/_form.scss
@@ -26,8 +26,15 @@
       border-bottom-style: solid;
       border-bottom-width: 1px;
       padding: 0px .5rem 0px .5rem;
-      margin: 1rem 0 1rem 0;
+      margin: 1rem 0 .1rem 0;
       transition: box-shadow 150ms ease-in-out;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      &:hover {
+         box-shadow: 0 1px 0 0;
+      }
 
       & > .tnt-input-field-label {
          position: absolute;
@@ -53,6 +60,10 @@
          border-color: red;
          @extend .tnt-border-radius-1;
 
+         &:hover {
+            box-shadow: 0 0 1px 1px;
+         }
+
          & > .tnt-input-field-label {
             padding: 0 10px 0 10px;
             transform: translateY(0.5rem);
@@ -77,6 +88,12 @@
             }
          }
       }
+   }
+
+   > .helper-text {
+      font-size: .8rem;
+      padding-left: 1rem;
+      transform: translateY(-1rem);
    }
 }
 
